objects/Case_Owner_History__c.object
<CustomObject>
    <description>This object was created to allow the training support center to report on agent efficiency and workload. The object tracks how long agents own cases and how long queues own cases.</description>
    <fields>
        <fullName>COH_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <inlineHelpText>This field displays the role of the user who made the ownership change on the case.</inlineHelpText>
        <label>COH Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date_Time__c</fullName>
        <formula>Case__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Duration_Seconds__c</fullName>
        <formula>(Handed_Off__c - Received__c) *24*3600</formula>
        <label>Case Owner Duration(Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Duration__c</fullName>
        <description>This field takes the duration__c and turns it into a readable time.</description>
        <formula>IF ((Handed_Off__c - Received__c)&gt; 0, 
TEXT(FLOOR((Handed_Off__c - Received__c))) &amp; &quot;:&quot; &amp; 
TEXT(FLOOR( 24 * ((Handed_Off__c - Received__c) - FLOOR((Handed_Off__c - Received__c))))) &amp; &quot;:&quot; &amp; 
TEXT(ROUND(60 * (ROUND( 24 * ((Handed_Off__c - Received__c)-FLOOR((Handed_Off__c - Received__c))),8) - FLOOR( 
ROUND( 24 * ((Handed_Off__c - Received__c)- FLOOR((Handed_Off__c - Received__c))),8)) ),0))&amp; &quot;:&quot; &amp; 
TEXT(Round(60*(((Handed_Off__c - Received__c) *1440) - FLOOR(((Handed_Off__c - Received__c) *1440))),0)) 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Case__r.Owner:User.UserRole.Name</formula>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT( Case__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Owner History</relationshipLabel>
        <relationshipName>Case_Owner_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(Handed_Off__c - Received__c) *24*3600</formula>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hand_Off_Status__c</fullName>
        <inlineHelpText>This is the status of the case when the ownership is handed off.</inlineHelpText>
        <label>Hand Off Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handed_Off__c</fullName>
        <description>This is the time the Owner transferred this Case to another User or Queue.</description>
        <label>Handed Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Duration__c</fullName>
        <description>This field takes the duration__c and turns it into a readable time.</description>
        <formula>IF ((Handed_Off__c - Received__c)&gt; 0, 
TEXT(FLOOR((Handed_Off__c - Received__c))) &amp; &quot;:&quot; &amp; 
TEXT(FLOOR( 24 * ((Handed_Off__c - Received__c) - FLOOR((Handed_Off__c - Received__c))))) &amp; &quot;:&quot; &amp; 
TEXT(ROUND(60 * (ROUND( 24 * ((Handed_Off__c - Received__c)-FLOOR((Handed_Off__c - Received__c))),8) - FLOOR( 
ROUND( 24 * ((Handed_Off__c - Received__c)- FLOOR((Handed_Off__c - Received__c))),8)) ),0))&amp; &quot;:&quot; &amp; 
TEXT(Round(60*(((Handed_Off__c - Received__c) *1440) - FLOOR(((Handed_Off__c - Received__c) *1440))),0)) 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <label>Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <inlineHelpText>This is the user who was the case owner for the duration of time outlined in the Case Duration field.</inlineHelpText>
        <label>Case Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <description>This is the time the Owner received this Case.</description>
        <label>Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recieved_Case_status__c</fullName>
        <inlineHelpText>This is the case status at the time the COH record was created.</inlineHelpText>
        <label>Recieved Case status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Case Owner History</label>
    <nameField>
        <displayFormat>COH-{000000}</displayFormat>
        <label>Case Owner History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owner History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>